PTP - Marcel - Main menu align fix
Revert to
https://github.com/passthestyles/stylesheets/commit/1d3f6c02ed958890a395b216d445b47d7fcd6fca
& proper fix for the main menu's vertical align on Webkit

--- a/ptp/marcel/marcel.css
+++ b/ptp/marcel/marcel.css
@@ -2435,4 +2435,10 @@ p:first-child, .alert:first-child, .heading:first-child {
     }
 }
 
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    .main-menu__list {
+        line-height: 21px;
+    }
+}
+
 /* ------------------------ I think this just might be my masterpiece --------------------------- */
